packages/cmk-frontend/src/themes/facelift/scss/_sidebar.scss
/* ... */
#check_mk_navigation {
  display: flex;
  flex-direction: column;
  float: left;
  width: 64px;
  height: 100%;
  z-index: 3000;
  position: relative;

  &.min {
    width: 48px;
  }
}

#check_mk_sidebar {
  display: flex;
  flex-direction: column;
  float: right;
  width: 280px;
  height: 100%;
  padding-top: $spacing;

  &.folded {
    display: none;
  }

  &.left {
    float: left;
    border-left: 1px solid $sidebar-border-color;
  }

  div.shortcuts {
    display: flex;
    padding: $spacing $spacing (0.5 * $spacing);
    border-bottom: 1px solid $sidebar-border-color;

    a {
      flex: 1 0 auto;
      font-size: $font-size-small;
      line-height: 1.7;
      color: $font-color;
      text-align: center;
      text-decoration: none;

      &:hover img {
        opacity: 0.5;
      }

      &:visited {
        color: $font-color;
      }

      &.min {
        font-size: 0;

        img {
          width: 24px;
          height: 24px;
        }
      }
    }

    img {
      margin-bottom: 6px;
    }
  }

  #side_content {
    height: 100%;
    overflow: auto;
    color: $font-color-black;

    & > .snapin {
      margin-top: 0;
    }
  }

  // needed to place the add_snapin button always at the bottom
  .simplebar-content {
    display: flex;
    flex-direction: column;
    min-height: 100%;
  }
}

#content_area {
  width: auto;
  height: 100%;
  overflow: hidden;
  background: $bg-color;
  position: relative;
  padding-left: 10px;
}

/* Top logo part */
#side_header {
  height: 58px;

  a {
    display: flex;
    align-items: center;
    justify-content: center;
    width: 100%;
    height: 100%;
    text-decoration: none;
    outline: none;
  }

  img {
    width: 48px;
    height: auto;
    padding: 0;
  }

  .min & img {
    width: 45px;
    padding: 0 12px;

    &.custom {
      width: 35px;
    }
  }
}

body.main .popup_menu #side_header > span {
  width: 100%;
  height: 100%;
  margin: 0;
  background-image: url('../facelift/images/mk-logo.png');
  background-position: 16px center;
  background-repeat: no-repeat;
  background-size: auto 30px;
}

#side_fold,
#saas {
  padding: $spacing 4px $spacing 0;
  font-size: $font-size-small;
  color: $font-color;
  text-align: center;
  cursor: pointer;
  border-left: 4px solid $navigation-bg-color;

  &:hover {
    border-left-color: $success;
  }

  img {
    margin-bottom: 8px;

    &:hover {
      opacity: 1;
    }
  }
}

#side_fold {
  &:not(.folded) {
    color: $font-color-green;
  }

  &:not(.folded) img.folded,
  &.folded img:not(.folded) {
    display: none;
  }
}

#side_version {
  margin: $spacing;
  font-size: $font-size-small;
  font-weight: $font-weight-bold;
  letter-spacing: $letter-spacing-table;
  color: $font-color;
  text-align: center;

  a {
    text-decoration: none;
    text-rendering: optimizeLegibility;

    &:hover {
      text-decoration: underline;
    }

    &:visited {
      color: $font-color;
    }
  }

  span.unack_werks {
    padding: 2px;
    margin-left: 2px;
    color: $font-color;
    cursor: pointer;
    background-color: $danger;
    border-radius: 6px;
  }
}

/* General layout of snapins */
body.side div.snapin,
div.add_snapin div.snapin {
  width: 100%;
  padding: (0.75 * $spacing) (2 * $spacing);
  overflow: hidden;
  background: $navigation-bg-color;
  border-radius: 4px;
  box-shadow: none;
  box-sizing: border-box;
}
/* ... */

